--- a/package.json
+++ b/package.json
@@ -9,12 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "24.5.0",
     "@types/react": "19.1.13",
     "@types/react-dom": "19.1.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.13",
+    "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "postcss": "^8.5.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "typescript": "5.9.2"
+    "react-hook-form": "^7.62.0",
+    "resend": "^6.1.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.13",
+    "typescript": "5.9.2",
+    "zod": "^4.1.9"
+  },
+  "devDependencies": {
+    "tw-animate-css": "^1.3.8"
   }
 }
